# blog-platform

./: .flake8  .gitignore  README.md  pyproject.toml
backend/blogplatform/: manage.py
backend/blogplatform/api/: apps.py  serializers.py  urls.py  views.py
backend/blogplatform/blogplatform/: asgi.py  settings.py  urls.py  wsgi.py
backend/blogplatform/homepage/: urls.py  views.py
backend/blogplatform/posts/: admin.py  apps.py  models.py  serializers.py  views.py
backend/blogplatform/posts/migrations/: 0001_initial.py  0002_alter_post_options.py
backend/blogplatform/templates/: contact.html  index.html  post_detail.html  search.html
backend/blogplatform/templates/base/: base.html
backend/blogplatform/templates/components/: breadcrumbs.html  card.html  footer.html  pagination.html
backend/blogplatform/user/: admin.py  apps.py  models.py
backend/blogplatform/user/migrations/: 0001_initial.py
frontend/vue-project/: package-lock.json  package.json
frontend/vue-project/src/: App.vue  main.js
frontend/vue-project/src/components/: HelloWorld.vue
